fix(modal): fix position when trigger is not centered

--- a/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
+++ b/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
@@ -35,7 +35,7 @@
   }
 
   .wrapper {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     outline: none;
     border: none;
